Issue #1: Fixed social icons layout bug.

--- a/src/styles/SocialIcon/SocialIcon.scss
+++ b/src/styles/SocialIcon/SocialIcon.scss
@@ -1,7 +1,9 @@
 .SocialIcons {
   display: flex;
+  justify-content: center;
   gap: 1em;
 }
+
 .SocialIcon {
   display: inline-block;
   width: var(--socialIconSize);
